[tool.poetry]
name = "nondenbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
line-bot-sdk = "^2.4.1"
requests-oauthlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pysen = "^0.10.3"
isort = "^5.11.4"
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
isort_known_first_party = ["tools", "tests"]
line_length = 120
mypy_ignore_packages = ["tools.tests.*"]
mypy_preset = "strict"
py_version = "py310"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]
